--- a/FrbaOfertas/FrbaOfertas.csproj
+++ b/FrbaOfertas/FrbaOfertas.csproj
@@ -62,12 +62,25 @@
     <Compile Include="AbmRol\FormRol.Designer.cs">
       <DependentUpon>FormRol.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmUsuario\AbmUsuarioMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmUsuario\AbmUsuarioMain.Designer.cs">
+      <DependentUpon>AbmUsuarioMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmUsuario\UpdateUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmUsuario\UpdateUsuario.Designer.cs">
+      <DependentUpon>UpdateUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="ComprarOferta\FormComprarOferta.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ComprarOferta\FormComprarOferta.Designer.cs">
       <DependentUpon>FormComprarOferta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Conexion.cs" />
     <Compile Include="CragaCredito\FormCargaCredito.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +122,15 @@
     <EmbeddedResource Include="AbmCliente\FormCliente.resx">
       <DependentUpon>FormCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AbmRol\FormRol.resx">
+      <DependentUpon>FormRol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmUsuario\AbmUsuarioMain.resx">
+      <DependentUpon>AbmUsuarioMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmUsuario\UpdateUsuario.resx">
+      <DependentUpon>UpdateUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,6 +159,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
