--- a/FrbaOfertas/App.config
+++ b/FrbaOfertas/App.config
@@ -2,6 +2,13 @@
 <configuration>
 <appSettings>
 <add key ="fecha" value ="02/02/1991"/>
+<add key ="comprarOfertaStatement" 
+	 value =
+	 "begin transaction
+		insert into oferta (precio_oferta, fecha_publicacion, fecha_vencimiento, id_proveedor)
+			values (4, cast('02/02/2019' as datetime), cast('04/04/2019' as datetime), 1)
+	 commit
+	 "/>
 </appSettings>
 <startup> 
 <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
